# todoist-cli

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  release.yml
docs/: contributing.md  examples.md  index.md
docs/ai/: errors.md  idempotency.md  index.md  output.md
docs/commands/: index.md  organization.md  tasks.md  utilities.md  workflow.md
docs/demo/: README.md  demo.tape
docs/getting-started/: config.md  install.md  quickstart.md
scripts/: generate_examples.py
src/td/: __init__.py
src/td/cli/: __init__.py  comments.py  completions.py  config_cmd.py  errors.py  labels.py  output.py  projects.py  rate_limit.py  review.py  schema_cmd.py  sections.py  tasks.py
src/td/core/: __init__.py  cache.py  client.py  config.py  exceptions.py  labels.py  projects.py  rate_limit.py  sections.py  tasks.py
src/td/tui/: __init__.py  picker.py  pickers.py  review.py
td/: __init__.py  schema.py
td/cli/: __init__.py  config_cmd.py  errors.py  labels.py  output.py  projects.py  sections.py  tasks.py
td/core/: cache.py  client.py  config.py  labels.py  projects.py  sections.py  tasks.py
tests/: conftest.py  test_architecture.py  test_cache.py  test_cli_extras.py  test_cli_init.py  test_client.py  test_completions.py  test_config.py  test_core_resolvers.py  test_errors.py  test_fuzzy.py  test_org_commands.py  test_output.py  test_quick_wins.py  test_schema.py  test_tasks.py  test_tui.py  test_version.py  test_workflow.py
